购物车空。列表添加金额添加小数。修改首页。购物车页数字字体类型

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -89,6 +89,18 @@
 		.shop-info .shop-info-text .shop-arithmetic{
 			right: 0 !important;
 		}
+		.shop-info .shop-info-text .shop-price .shop-pices{
+			font-family: "Helvetica";
+		}
+		.shop-info .shop-info-text .shop-arithmetic .num{
+			font-family: "Helvetica";
+		}
+		#AllTotal{
+			font-family: "Helvetica";
+		}
+		.list .price span{
+			font-family: "Helvetica";
+		}
     </style>
 </head>
 <script type="text/javascript">
