--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -204,6 +204,8 @@
 					
 					<div class="fack_shipped_cancel_order" onclick='againBuy("{{sn}}")'>再次购买</div>
 					<div class="delete_order" data-id="{{id}}" style="border: 1px solid #DEDEDE;color: #333333;">删除订单</div>
+					{{else if status == 'DENIED'}}
+					<div class="fack_shipped_cancel_order" onclick='againBuy("{{sn}}")'>再次购买</div>
 					{{/if}}
 				</div>
 			</div>
