[fix]健康测评返回bug

--- a/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-result.html
@@ -31,7 +31,7 @@
 						<p>健康测评</p>
 					</div>
 					<div class="arror_return z">
-						<img src="/xcview/images/back icon.png" onclick="javascript:location.href='./healthy-answer.html'" alt="返回">
+						<img src="/xcview/images/back icon.png" onclick="common_share_backs()" alt="返回">
 					</div>
 					<div class="header_news">
 						<img src="/xcview/images/share_img.png" alt="分享">
