--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -26,7 +26,7 @@
 			document.documentElement.style.fontSize=kk/7.5+"px";
 		</script>
 	</head>
-	<body style="display: none">
+	<body>
 		<div class="wp">	
 			<div class="wrap-header">
 				<div class="header">	
@@ -34,7 +34,7 @@
 						<p>健康测评</p>
 					</div>
 					<div class="arror_return z">
-						<img src="/xcview/images/back icon.png" onclick="javascript:location.href='./home_page.html'" alt="返回">
+						<img src="/xcview/images/back icon.png" onclick="common_share_backs()" alt="返回">
 					</div>
 					<div class="header_news">
 						<img src="/xcview/images/share_img.png" alt="分享">
