--- a/wechat/src/main/webapp/xcview/html/shop/search_goods.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_goods.html
@@ -46,7 +46,7 @@
 				<div class="header_seeks">
 					<script type="text/html" id="header_seeks">
 						{{each items as item i}}
-						{{if item.name !=null}}
+						{{if item !=null}}
 							
 							<input type="text" name="" value="" autocomplete="off" class="aaa"  id="header_input" placeholder="大家都在搜：{{item.name}}" />
 						{{else}}
