[fix]健康测评 文案修改

--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -101,7 +101,7 @@
 									<div class="flat_patternmaking">
 										<img src="/xcview/images/healthy-test.png" alt="健康测评" />
 									</div>
-									<div class="main_title">健康测评—了解自己的体质，获得个性化调理方案</div>
+									<div class="main_title">健康测评—了解自己的健康情况，获得个性化调理方案</div>
 								</div>
 							</li> 
 							<li class="onclick_li">
