--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -45,7 +45,7 @@
 				<img class="left-icon z" src="/xcview/images/healthy-icon.png" alt="标题icon"/>
 				<img class="right-icon y" src="/xcview/images/healthy.png" alt="标题图片"/>
 			</div>
-			<h5 class="healthy-title">了解自己的体质，获得个性化调理方案</h5>
+			<h5 class="healthy-title">了解自己的健康情况，获得个性化调理方案</h5>
 			<img class="diantu" src="/xcview/images/diantu.png"/>
 		<!--填写基本信息、开始测试-->
 		<div class="content-inf">
