修改网络不好情况下js加载顺序

--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -232,7 +232,7 @@
 			</div>
 			<div class="close">×</div>
 		</div>
-	</div>
+	</div> 
 	<!-- 点击购物车出现提示结束 -->
 	
 </body>
@@ -241,12 +241,13 @@
 <script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script> 
 <script type="text/javascript" src="/xcview/js/common/common.js"></script> 
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
+<script type="text/javascript" src="/xcview/js/shop/common/shop_specification.js?version=21a43862ba"></script>
 <script type="text/javascript" src="/xcview/js/shop/all_evaluation.js"></script>
 <script type="text/javascript" src="/xcview/js/share/share.js"></script>
-
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 <script type="text/javascript" src="/xcview/js/shop/jquery.spinner.js"></script><!-- 点击数量引入 -->
 <script type="text/javascript" src="/xcview/js/shop/common/commodity_details_bottom.js?version=21a43862ba"></script>
+
 
 <!--点击查看大图引入-->
 
