--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -530,6 +530,7 @@
 <script src="/xcview/js/shop/ckg/bigImg.js?version=ca4b805048"></script>
 <script src="/xcview/js/shop/ckg/swiper.min.js"></script>
 
+<script type="text/javascript" src="/xcview/js/shop/common/shop_specification.js?version=21a43862ba"></script>
 <script type="text/javascript" src="/xcview/js/shop/commodity_details.js?version=21a43862ba"></script>
 <script type="text/javascript" src="/xcview/js/share/share.js?version=82d2bc907e"></script>
 <!-- 滑动焦点图引入-->	
