--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -253,14 +253,13 @@
 <script type="text/javascript" src="/xcview/js/common/common.js"></script> 
 
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
+<script type="text/javascript" src="/xcview/js/shop/common/shop_specification.js?version=21a43862ba"></script>
 <script type="text/javascript" src="/xcview/js/shop/recommend.js"></script>
 <script type="text/javascript" src="/xcview/js/share/share.js"></script>
-
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
-
 <script type="text/javascript" src="/xcview/js/shop/jquery.spinner.js"></script><!-- 点击数量引入 -->
-
 <script type="text/javascript" src="/xcview/js/shop/common/commodity_details_bottom.js?version=21a43862ba"></script>
+
 
 <script>
 	//安卓使用
