--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2327,7 +2327,7 @@
 																<img src="{{order.thumbnail}}"/>
 															</div>
 															<div class="goods-inf-name y">
-																<p><a href="/web/html/anchors_preview.html?productId={{order.id}}" target="_blank">{{order.name}}</a></p>
+																<p><a href="/web/html/anchors_preview.html?productId={{order.sku.id}}" target="_blank">{{order.name}}</a></p>
 																<span>&yen; {{order.price}}</span>
 															</div>
 															<div class="select-order-num y">
@@ -2405,7 +2405,7 @@
 																	<img src="{{mode.thumbnail}}"/>
 																</div>
 																<div class="goods-inf-name y">
-																	<p><a href="/web/html/anchors_preview.html?productId={{mode.id}}" target="_blank">{{mode.name}}</a></p>
+																	<p><a href="/web/html/anchors_preview.html?productId={{mode.sku.id}}" target="_blank">{{mode.name}}</a></p>
 																	<span>&yen; 22</span>
 																</div>
 																<div class="select-order-num y">
