测试修改地址管理返回

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -47,7 +47,8 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="goHistorys()">
+			<div class="return" onclick="javascript:history.back(-1);" >
+			<!--<div class="return" onclick="goHistorys()">-->
 			<!--<div class="return" onclick="common_share_back()">-->
 			<!--<div class="return" onclick="returns()">-->
 				<img src="/xcview/images/backicon.png" alt="" class="">
