选择数量框--可点击

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -101,6 +101,10 @@
 		.list .price span{
 			font-family: "Helvetica";
 		}
+		.shopping_trolley_center .buy{
+			height: .58rem;
+			/*background: red;*/
+		}
     </style>
 </head>
 <script type="text/javascript">
