修改师承修改标题、确认订单返回商品id、已售件数为空返回处理

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -193,7 +193,12 @@
 				{{if items.marketprice > items.price}}
 					<span class="original_price">￥<span>{{items.marketprice}}</span></span>
 				{{/if}}
-				<span class="sold_out">已售{{items.sales}}件</span>
+				{{if items.sales!=null}}
+					<span class="sold_out">已售{{items.sales}}件</span>
+				{{else}}
+					<span class="sold_out">已售0件</span>
+				{{/if}}
+
 				<div class="both"></div>
 			</div>
 		</div>
