[fix]商品规格默认选中

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -479,7 +479,7 @@
 					<ul class="specifications_ul" >
 						{{each items.entries as itemss i}}
 						    {{if itemss.isSelected}}					
-								<li class="casing include" title="{{items.name}}" data-id="{{itemss.id}}" data-ids="{{items.id}}">{{itemss.value}}</li>
+								<li class="casing include casing-{{itemss.id}}" title="{{items.name}}" data-id="{{itemss.id}}" data-ids="{{items.id}}">{{itemss.value}}</li>
 						    {{/if}}	
 						{{/each}}
 					</ul>
